Fix grade book shifting activities

--- a/src/style/moodle-311-base.css
+++ b/src/style/moodle-311-base.css
@@ -181,3 +181,28 @@
         }
     }
 }
+
+/* Added class movehere to fix the grade book */
+
+.section li.movehere a {
+    display: block;
+    width: 100%;
+    height: 2rem;
+    border: 2px dashed #343a40; }
+
+.block_social_activities li a.movehere,
+.block_site_main_menu li a.movehere {
+      display: block;
+      width: 100%;
+      height: 2rem;
+      border: 2px dashed #343a40;
+      margin: 4px 0; }
+
+.path-grade-edit-tree .setup-grades td.movehere {
+    padding: 0; }
+      
+.path-grade-edit-tree .setup-grades td.movehere a.movehere {
+    display: block;
+    width: 100%;
+    height: 2rem;
+    border: 2px dashed #343a40; }
